git-annex (4.20130912) UNRELEASED; urgency=low

  * Support hot-swapping of removable drives containing gcrypt repositories.
  * remotes: New command, displays a compact table of remotes that
    contain files.
    (Thanks, anarcat for display code and mastensg for inspiration.)
  * fsck: Fix detection and fixing of present direct mode files that are
    wrongly represented as standin symlinks on crippled filesystems.
  * sync: Fix bug that caused direct mode mappings to not be updated
    when merging files into the tree on Windows.
  * sync: Don't fail if the directory it is run in gets removed by the
    sync.
  * addurl: Fix quvi audodetection, broken in last release.
  * status: In local mode, displays information about variance from configured
    numcopies levels. (--fast avoids calculating these)

 -- Joey Hess <joeyh@debian.org>  Thu, 12 Sep 2013 12:14:46 -0400

git-annex (4.20130911) unstable; urgency=low

  * Fix problem with test suite in non-unicode locale.

 -- Joey Hess <joeyh@debian.org>  Wed, 11 Sep 2013 12:14:16 -0400

git-annex (4.20130909) unstable; urgency=low

  * initremote: Syntax change when setting up an encrypted special remote.
    Now use keyid=$KEYID rather than the old encryption=$KEYID
  * forget: New command, causes git-annex branch history to be forgotten
    in a way that will spread to other clones of the repository.
    (As long as they're running this version or newer of git-annex.)
  * forget --drop-dead: Completely removes mentions of repositories that
    have been marked as dead from the git-annex branch.
  * sync, assistant: Force push of the git-annex branch. Necessary
    to ensure it gets pushed to remotes after being rewritten by forget.
  * Added gcrypt support. This combines a fully encrypted git
    repository (using git-remote-gcrypt) with an encrypted git-annex special
    remote.
  * sync: Support syncing with gcrypt remotes.
  * importfeed: Also ignore transient problems with downloading content
    from feeds.