@@ -62,7 +62,7 @@ quite a lot.
   * [gpg](http://gnupg.org/) (optional; needed for encryption)
   * [lsof](ftp://lsof.itap.purdue.edu/pub/tools/unix/lsof/)
     (optional; recommended for watch mode)
-  * [gcrypt](https://github.com/blake2-ppc/git-remote-gcrypt)
+  * [gcrypt](https://github.com/joeyh/git-remote-gcrypt)
     (optional)
   * multicast DNS support, provided on linux by [nss-mdns](http://www.0pointer.de/lennart/projects/nss-mdns/)
     (optional; recommended for the assistant to support pairing well)
