@@ -7,7 +7,7 @@
   <p>
     Do you want to combine these files into your repository?
   <p>
-    <a .btn href="@{FinishAddDriveR drive}">
+    <a .btn href="@{FinishAddDriveR (RemovableDriveKey drive Nothing)}">
       <i .icon-resize-small></i> Combine the repositories #
     The combined repositories will sync and share their files.
   <p>
