@@ -1,0 +1,30 @@
+<div .span9 .hero-unit>
+  <h2>
+    Encrypt this drive?
+  <p>
+    Encrypting the repository stored on the removable drive at #
+    <tt>#{mountPoint drive}</tt> #
+    will prevent the data stored in it from being exposed if the drive #
+    falls into the wrong hands. However, encryption #
+    will also prevent you from sharing the drive with friends, or #
+    easily accessing its contents on another computer.
+  <p>
+    <a .btn href="@{FinishAddDriveR (RemovableDriveKey drive Nothing)}">
+      <i .icon-minus-sign></i> Do not encrypt repository #
+    Anyone who has the drive can see the files stored on it.
+    $forall (keyid, name) <- secretkeys
+      <p>
+        <a .btn href="@{FinishAddDriveR (RemovableDriveKey drive (Just keyid))}">
+          <i .icon-ok-sign></i> Encrypt repository #
+        to
+        <span title="key id #{keyid}">
+          <i .icon-user></i> #
+          $if null name
+            key id #{keyid}
+          $else
+            #{name}
+  <p>
+    <a .btn href="">
+      <i .icon-plus-sign></i> Encrypt repository #
+    with a new encryption key
+^{cloneModal}
